trace/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trace
spec:
  replicas: 1
  selector:
    matchLabels:
      app: trace
  template:
    metadata:
      labels:
        app: trace
    spec:
      containers:
      - name: trace
        image: ghcr.io/rybbit-io/rybbit-backend:latest
        ports:
        - containerPort: 3001
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trace-client
spec:
  replicas: 1
  selector:
    matchLabels:
      app: trace-client
  template:
    metadata:
      labels:
        app: trace-client
    spec:
      containers:
      - name: trace-client
        image: ghcr.io/rybbit-io/rybbit-client:latest
        ports:
        - containerPort: 3002
