trace/service.yml
apiVersion: v1
kind: Service
metadata:
  name: trace-service
spec:
  selector:
    app: trace
  ports:
    - protocol: TCP
      port: 3001
      targetPort: 3001
---
apiVersion: v1
kind: Service
metadata:
  name: trace-client-service
spec:
  selector:
    app: trace-client
  ports:
    - protocol: TCP
      port: 3002
      targetPort: 3002
