trace/ingress.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: trace-route
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: main
      namespace: gateway
  hostnames:
    - trace.pmh.codes
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /api/
      backendRefs:
        - group: ""
          kind: Service
          name: trace-service
          port: 3001
          weight: 1
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ""
          kind: Service
          name: trace-client-service
          port: 3002
          weight: 1
